# apex_rag_v4

./: .gitignore  LICENSE  README.md  download_datasets.py  eval_framework.py  progress.md  pyproject.toml  run_evals_to_excel.py  save_results.py
benchmarks/: __init__.py  _utils.py  hotpotqa.py  multihop_rag.py  natural_questions.py  ragbench.py  run_all.py  triviaqa.py
docs/: development.md
docs/user-stories/: Evaluations.md  README.md  US-001-query-intelligence.md  US-002-adaptive-retrieval-planning.md  US-003-expert-retrieval-routing.md  US-004-evidence-fusion.md  US-005-validation-mesh.md  US-006-complex-query-reasoning-path.md  US-007-evidence-scoring-gap-detection.md  US-008-retrieval-repair-loop.md  US-009-grounded-reasoning-generation.md  (+14 more)
tests/: __init__.py  story_checks.py  test_pipeline_integration.py  test_story_index.py  test_us_001_impl.py  test_us_001_query_intelligence.py  test_us_002_adaptive_retrieval_planning.py  test_us_002_impl.py  test_us_003_expert_retrieval_routing.py  test_us_003_impl.py  test_us_004_evidence_fusion.py  test_us_004_impl.py  test_us_005_impl.py  test_us_005_validation_mesh.py  test_us_006_complex_query_reasoning_path.py  test_us_006_impl.py  test_us_007_evidence_scoring_gap_detection.py  test_us_007_impl.py  test_us_008_impl.py  test_us_008_retrieval_repair_loop.py  test_us_009_grounded_reasoning_generation.py  test_us_009_impl.py  test_us_010_impl.py  test_us_010_risk_critique_verification.py  test_us_011_apex_eval_framework.py  test_us_011_impl.py  test_us_012_impl.py  test_us_012_research_foundation_traceability.py
(+14 files in other folders)
